refactor(project): rename greyshare → carillon

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,7 +5,7 @@
 @import "plugins";
 
 @import "custom/colors";
-@import "greyshade";
+@import "carillon";
 
 @import "custom/fonts";
 @import "custom/layout";
