refactor(style): use two different noise file

--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -91,6 +91,7 @@ figure.code{
 	}
 	code, pre{
 		background: none;
+		background-image: url("/images/noise-light.png");
 		border: none;
 		padding: 0;
 		margin: 0;
