--- a/sass/_carillon.scss
+++ b/sass/_carillon.scss
@@ -171,6 +171,8 @@ body {
 		opacity: 1;
 	}
 	.left-col {
+		background-image: url("/images/noise-dark.png");
+
 		width: 23%;
 		position: fixed;
 		opacity: .3;
