--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -5,4 +5,6 @@ $color-gray02: #999;
 $color-gray03: #ccc;
 $color-gray04: #ddd;
 $color-gray05: #fff;
+
+$bg-noise: url("/images/noise.png");
 $carillon: #4183C4;
