--- a/sass/parts/_post.scss
+++ b/sass/parts/_post.scss
@@ -1,14 +1,19 @@
-.post{
-	h1.title, .entry-content{
+.post {
+	h1.title, .entry-content {
 		margin-left: 200px;
 		@media screen and (max-width: 800px){
 			margin-left: 0;
 		}
 	}
-	.meta{
+	h1.title {
+		a {
+			text-decoration: underline;
+ 		}
+	}
+	.meta {
 		position: absolute;
 		top: 85px;
-		line-height: 2;
+		line-height: $lineHeight-default;
 		font-size: 0.9em;
 		color: $color-gray02;
 		width: 170px;
@@ -17,14 +22,14 @@
 			position: static;
 			width: auto;
 		}
-		a{
+		a {
 			@include link-colors($color-gray02, $color-gray01);
 			@include transition(0.3s);
 		}
-		.date, .tags, .comments{
+		.date, .tags, .comments {
 			padding-left: 30px;
 			position: relative;
-			&:before{
+			&:before {
 				color: $color-gray03;
 				font: 1.3em $font-icon;
 				line-height: 1.6em;
@@ -36,11 +41,11 @@
 				margin-right: 30px;
 			}
 		}
-		.date:before{content: "\f073";}
-		.tags:before{content: "\f02c";}
-		.comments:before{content: "\f075";}
+		.date:before {content: "\f073";}
+		.tags:before {content: "\f02c";}
+		.comments:before {content: "\f075";}
 	}
-  hr{
+  hr {
 		height: 0;
 		margin-top: 20px;
 		margin-bottom: 20px;
