--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -41,24 +41,24 @@ $solarized: light !default;
 $pre-bg: $color-gray04;
 $pre-border: $color-gray03;
 
-article{
-	code, pre{
+article {
+	code, pre {
 		background: $pre-bg;
 		border: 1px solid $pre-border;
 		font-family: $font-mono;
 	}
-	code{
+	code {
 		font-size: 0.9em;
 		padding: 1px 3px;
 		margin: 0 3px;
 	}
-	pre{
+	pre {
 		font-size: 1 / 0.9em;
 		line-height: 1.5;
 		margin-top: 10px;
 		padding: 5px 15px;
 		overflow-x: auto;
-		code{
+		code {
 			background: none;
 			border: none;
 			padding: 0;
@@ -67,14 +67,14 @@ article{
 	}
 }
 
-figure.code{
+figure.code {
 	border: 1px solid $pre-border;
 	margin-top: 10px;
 	padding: 5px 15px;
-	figcaption{
+	figcaption {
 		font-size: 0.9em;
 		position: relative;
-		span{
+		span {
 			margin: -5px -15px 0;
 			padding: 5px 15px;
 			display: block;
@@ -83,43 +83,44 @@ figure.code{
 				display: none;
 			}
 		}
-		a{
+		a {
 			position: absolute;
 			top: 5px;
 			right: 0;
 		}
 	}
-	code, pre{
+	// code,
+	pre {
 		background: none;
 		background-image: url("/images/noise-light.png");
 		border: none;
 		padding: 0;
 		margin: 0;
 	}
-	.highlight{
+	.highlight {
 		overflow-x: auto;
 	}
-	.line-numbers{
+	.line-numbers {
 		border-right: 1px solid $pre-border;
 		font-family: $font-mono;
 		padding-right: 15px;
 		text-align: right;
 	}
-	table{
+	table {
 		background: white;
 		border: none;
 		text-align: left;
 		margin-top: 0;
-		td{
+		td {
 			text-align: left;
 		}
 	}
-	td.code{
+	td.code {
 		width: 100%;
 		padding-left: 15px;
 	}
 }
-.entry-content .gist{
+.entry-content .gist {
 	// background: $pre-bg;
 	color: $color-gray01;
 	padding: 15px 15px 5px 0px;
@@ -127,13 +128,13 @@ figure.code{
 	border: 1px solid $pre-border;
 	position: relative;
 	overflow: hidden;
-	.gist-file{
+	.gist-file {
 		margin: 0;
 		border: none;
-		.gist-data{
+		.gist-data {
 			background: none;
 			border: none;
-			pre{
+			pre {
 				font: 0.9em $font-mono;
 				line-height: 1.5;
 			}
@@ -142,15 +143,15 @@ figure.code{
 				border: none;
 			}
 		}
-		.gist-meta{
+		.gist-meta {
 			font: 300 0.9em $font-default;
 			line-height: 1.5;
 			margin: 0 -16px -6px;
 			padding: 5px 15px;
 			background: #ececec;
-			a{
+			a {
 				color: $color-main;
-				&:first-of-type{
+				&:first-of-type {
 					position: absolute;
 					top: 5px;
 					right: 15px;
@@ -168,7 +169,7 @@ figure.code{
 		}
 	}
 }
-figure.code, .gist-highlight{
+figure.code, .gist-highlight {
 	.c {
 		color:$base01 !important;
 		font-style: italic !important;
