docs(credits): update credits and links

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,2 +1,2 @@
 {% include custom/footer.html %}
-Design credit: <a href="http://shashankmehta.in/archive/2012/carillon.html">Shashank Mehta</a>
+Theme: <a href="https://github.com/edouard-lopez/carillon">Carillon</a>
