refactor(font): add FOSS fonts first

--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,5 +1,8 @@
-$font-default: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
+// $font-default: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+// $font-mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
+$font-default: 'Ubuntu', 'DejaVu Sans', 'Droid Sans', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-mono: 'Ubuntu Mono', 'DejaVu Sans Mono', 'Droid Sans Mono', Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
+$font-serif: 'DejaVu Serif', 'Droid Serif', serif;
 
 $font-icon: FontAwesome;
 $font-icon-path: "/font/fontawesome-webfont";
