feat(style): design v0.2

--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -1,4 +1,4 @@
-$color-background: #eee;
+$color-background: #333;
 $color-main: #258fb8;
 $color-gray01: #666;
 $color-gray02: #999;
@@ -8,3 +8,10 @@ $color-gray05: #fff;
 
 $bg-noise: url("/images/noise.png");
 $carillon: #4183C4;
+
+$color-selection: $carillon;
+$color-body: $color-gray01;
+$thin-highlight: #F7F7F7;
+$pre-border: #FFF;
+$meta-color: #ccc;
+$heading-color: #333;
