--- a/sass/_carillon.scss
+++ b/sass/_carillon.scss
@@ -1,18 +1,7 @@
 //This is the main carillon css file.
-
-html {
-  height: 100%;
-}
-
-body {
-	background: #3D4349;
-	font-family: "Open Sans", "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
-	height: 100%;
-}
-
 ::selection, ::-moz-selection, ::-webkit-selection {
   background-color: $carillon;
-  color: $color-background;
+  color: $color-selection;
 }
 
 #header {
@@ -68,15 +57,17 @@ body {
 		left: 40px;
 		a {
 			color: inherit;
-			text-decoration: underline;
 		}
 	}
 	.mid-col {
 		position: absolute;
-  		right: 0;
-  		min-height: 100%;
-		width: 77%;
+		right: 0;
+		min-height: 100%;
+		width: 100%-$sidebarWidth;
 		background: white;
+		border-left: thin solid #aaa;
+		box-shadow: 0px 0px 20px 4px #000, 0px 0px 0px 2px transparent inset;
+
 		#banner {
 			width: 100%;
 			small {
@@ -90,10 +81,13 @@ body {
 		}
 		.mid-col-container {
 			padding: 0px 70px 0px 40px;
+			max-width: $max-ContentWidth;
 			#content {
 				width: 100%;
 				article {
 					border-top: none;
+					margin-bottom: 2em;
+					padding-bottom: 2em;
 					.title {
 						margin-left: 0px;
 					}
@@ -101,9 +95,6 @@ body {
 						margin-left: 0px;
 						.gist .gist-file .gist-data {
 							.line_numbers {
-								line-height: inherit;
-							}
-							pre {
 								line-height: inherit;
 							}
 						}
@@ -128,13 +119,12 @@ body {
 					}
 					.meta {
 						position: relative;
-						float: right;
-						top: 0px;
-						color: #555;
-						text-align: right;
+						top: -1.5em;
+						margin-bottom: -1.5em;
+						color: $meta-color;
 						width: auto;
 						.date::before {
-							color: #555;
+							color: $meta-color;
 							position: relative;
 							margin-right: 10px;
 						}
@@ -144,9 +134,9 @@ body {
 							margin-right: 10px;
 						}
 					}
-					h1.title{
+					h1.title {
 						a {
-							color: #333;
+							color: $heading-color;
 							-webkit-transition: color 0.3s;
 							-moz-transition: color 0.3s;
 							-o-transition: color 0.3s;
@@ -171,7 +161,7 @@ body {
 		opacity: 1;
 	}
 	.left-col {
-		width: 23%;
+		width: $sidebarWidth;
 		position: fixed;
 		opacity: .3;
 		-webkit-transition: all .2s ease-in;
@@ -222,21 +212,11 @@ body {
 	}
 	article {
 		.meta {
-			line-height: 1.5em;
-			margin-top: 0;
 			span::before {
 				padding-right: 0;
 			}
 		}
 	}
-}
-
-a {
-	color: $carillon;
-}
-
-a:hover {
-	color: $carillon;
 }
 
 body {
@@ -259,7 +239,7 @@ body {
 			#header {
 				padding: 40px 0px;
 				text-align: center;
-				#sub-nav{
+				#sub-nav {
 					display: block;
 				}
 				#main-nav {
@@ -278,13 +258,6 @@ body {
 			width: 100%;
 			.mid-col-container {
 				padding: 15px 15px;
-				#content {
-					article {
-						.meta {
-							float: none;
-						}
-					}
-				}
 			}
 		}
 	}
