--- a/sass/_parts.scss
+++ b/sass/_parts.scss
@@ -5,5 +5,6 @@
 @import "parts/archive";
 @import "parts/comment";
 @import "parts/footer";
+@import "parts/related_posts";
 @import "parts/syntax";
 @import "parts/twitter";
