--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,32 +1,23 @@
 $max-width: 1000px;
 
+$sidebarWidth: 30%;
+$max-ContentWidth: 40em;
+$block-marginTop: 1.5em;
+
 *{
 	margin: 0;
 	padding: 0;
 }
-body{
-	font-family: $font-default;
-	font-weight: 300;
-	font-size: 14px;
-	background: $color-background;
-	color: $color-gray01;
-	@media screen and (max-width: 1040px){
-		margin: 0 20px;
-	}
-	@media screen and (max-width: 600px){
-		font-size: 13px;
-	}
-}
-h1{
+h1 {
 	font-size: 1.8em;
 }
-h2{
+h2 {
 	font-size: 1.5em;
 }
-h3{
+h3 {
 	font-size: 1.3em;
 }
-a{
+a {
 	text-decoration: none;
 	outline-width: 0;
 	color: $color-main;
@@ -39,16 +30,16 @@ a{
   &.left, &.right { margin-bottom: .8em; }
 }
 
-.alignleft{
+.alignleft {
 	float: left;
 }
-.alignright{
+.alignright {
 	float: right;
 }
-.clearfix{
+.clearfix {
 	@include pie-clearfix;
 }
-.inner{
+.inner {
 	width: $max-width;
 	margin: 0 auto;
 	@media screen and (max-width: 1040px){
