--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -38,48 +38,48 @@ $solarized: light !default;
   $base3:   $_base03;
 }
 
-$pre-bg: $color-gray04;
-$pre-border: $color-gray03;
+$pre-bg: none;
+$pre-border: none;
+
+@mixin emboss-light {
+	text-shadow: 1px 1px 0 #fff;
+}
 
 article {
 	code, pre {
-		background: $pre-bg;
-		border: 1px solid $pre-border;
-		font-family: $font-mono;
+		@include inline-code;
+		// background: $pre-bg;
+	  padding: 0.1em 0.2em;
+		border: $pre-border;
 	}
 	code {
-		font-size: 0.9em;
-		padding: 1px 3px;
-		margin: 0 3px;
+		@include emboss-light;
+		font-family: $font-serif;
+		padding-bottom: 0;
 	}
 	pre {
 		font-size: 1 / 0.9em;
-		line-height: 1.5;
-		margin-top: 10px;
-		padding: 5px 15px;
 		overflow-x: auto;
 		code {
 			background: none;
 			border: none;
-			padding: 0;
-			margin: 0;
+			font-family: $font-mono;
 		}
 	}
 }
 
 figure.code {
-	border: 1px solid $pre-border;
 	margin-top: 10px;
-	padding: 5px 15px;
+	font-family: $font-mono;
 	figcaption {
 		font-size: 0.9em;
 		position: relative;
 		span {
-			margin: -5px -15px 0;
-			padding: 5px 15px;
+			// margin: -5px -15px 0;
+			// padding: 5px 15px;
 			display: block;
 			background: #ececec;
-			&:empty{
+			&:empty {
 				display: none;
 			}
 		}
@@ -89,22 +89,29 @@ figure.code {
 			right: 0;
 		}
 	}
-	// code,
+	code, pre {
+	  white-space: pre;
+	  margin: 0;
+	  padding: 0.4em 0.2em;
+	}
 	pre {
 		background: none;
-		background-image: url("/images/noise-light.png");
+		background-image: $bg-noise;
 		border: none;
-		padding: 0;
-		margin: 0;
 	}
 	.highlight {
 		overflow-x: auto;
 	}
 	.line-numbers {
-		border-right: 1px solid $pre-border;
-		font-family: $font-mono;
-		padding-right: 15px;
+		border-right: 1px dashed $pre-border;
 		text-align: right;
+		padding-right: 4px;
+		line-height: 1.2em;
+		color: #ddd;
+		@include emboss-light;
+	}
+	.line {
+		padding-left: .5em;
 	}
 	table {
 		background: white;
@@ -117,7 +124,6 @@ figure.code {
 	}
 	td.code {
 		width: 100%;
-		padding-left: 15px;
 	}
 }
 .entry-content .gist {
