--- a/sass/_carillon.scss
+++ b/sass/_carillon.scss
@@ -118,8 +118,26 @@
 							border-bottom: none;
 						}
 						blockquote {
-							border-left: 5px solid $carillon;
+							// border-left: 5px solid $carillon;
+							position: relative;
+							border-left: 1px dotted #ccc;
+							background: #FFF;
+							font-family: $font-serif;
+							margin-left: 3em;
+							&::before {
 							background: #FCFCFC;
+								content: "‟";
+								font-size: 5em;
+								font-weight: bold;
+								line-height: 100%;
+								height: 100%;
+								position: absolute;
+								text-align: right;
+								left: -.6em;
+								top: 0;
+								color: #eee;
+								text-shadow: 1px 1px 1px #ccc;
+							}
 						}
 						table {
 							line-height: 1.2em;
