refactor(style): simplify 'read more' CSS

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -25,17 +25,9 @@ article {
 			@include transition(0.3s);
 		}
 		.more-link {
-			display: block;
-			margin-top: 16px;
-			padding-left: 30px;
+			display: inline-block;
+			margin-top: 1em;
 			position: relative;
-			&:before {
-				content: "\f061";
-				font: 1.3em $font-icon;
-				line-height: 1.6em;
-				position: absolute;
-				left: 0;
-			}
 		}
 		p, blockquote, ul, ol, dl, table, iframe, h1, h2, h3, h4, h5, h6, .video-container {
 			margin-top: $block-marginTop;
