--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -69,16 +69,16 @@ article {
 }
 
 figure.code {
-	margin-top: 10px;
+	margin-top: 1.25em;
 	font-family: $font-mono;
 	figcaption {
-		font-size: 0.9em;
+		font-size: 1em;
 		position: relative;
 		span {
 			// margin: -5px -15px 0;
 			// padding: 5px 15px;
 			display: block;
-			background: #ececec;
+			background: #fff;
 			&:empty {
 				display: none;
 			}
