feat(style): add 'hide' class (maintain accessibility)

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,3 +22,12 @@
 	width: $width;
 	height: $height;
 }
+
+.hide {
+	position:absolute;
+	left:-10000px;
+	top:auto;
+	width:1px;
+	height:1px;
+	overflow:hidden;
+}
