--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,14 +1,7 @@
 {% if index %}
 	<h1 class="title" itemprop="name"><a href="{{ root_url }}{{ post.url }}" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
 
-	<!-- Date a tag list -->
-	<div class="meta">
-		<div class="date">{% include post/date.html %}{{ time }}</div>
-		<div class="tags">{% include post/categories.html %}</div>
-		{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
-			<span class="comments"><a href="{{ root_url }}{{ post.url }}#disqus_thread">Comments</a></span>
-		{% endif %}
-	</div>
+		{% include meta.html %}
 
 	<!-- Entry content -->
 	<div class="entry-content" itemprop="articleBody">
@@ -18,5 +11,6 @@
 	</div>
 {% else %}
 	<h1 class="title" itemprop="name">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
+	{% include meta.html %}
 	<div class="entry-content" itemprop="articleBody">{{ content }}</div>
 {% endif %}
