--- a/source/_includes/post/related_posts.html
+++ b/source/_includes/post/related_posts.html
@@ -1,3 +1,6 @@
 {% for post in site.related_posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time>
+  </li>
 {% endfor %}
