feat(layout): extend footer to hold copyright/credit

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,2 +1,10 @@
-{% include custom/footer.html %}
-Theme: <a href="https://github.com/edouard-lopez/carillon">Carillon</a>
+<!-- {% include custom/footer.html %} -->
+<p>
+  <abbr title="Copyright">©</abbr> {{ site.time | date: "%Y" }} - {{ site.author }} –
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  ×
+  <span class="credit">
+    <a href="https://github.com/edouard-lopez/carillon">Carillon</a> theme.
+  </span>
+</p>
+
